--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="nl">
 
-<!-- contrast met kwintencirkel harmonie etc-->
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,24 +20,22 @@
         <hr>
         <img src="Media/Afbeeldingen/howardshore.jpg" alt="">
         <hr>
+        <br>
         <h3>Inhoud</h3>
         <nav>
             <ul>
                 <li><a href="#INLEIDING">Inleiding</a></li>
                 <li>
-                    <a href="#1">Welk muzikaal aspect beinvloed een film scene het meeste?</a>
+                    <a href="#Hoofdvraag">Welk muzikaal aspect beinvloed een film scene het meeste?</a>
                     <ul>
-                        <li><a href="">Hypothese</a></li>
-                        <li><a href="">Onderzoek</a></li>
+                        <li><a href="#HYPOTHESE">Hypothese</a></li>
+                        <li><a href="#ONDERZOEK">Onderzoek</a></li>
                         <ul>
-                            <li><a href="#1a">Timbre</a></li>
-                            <li><a href="#1b">Toonsoort</a></li>
-                            <li><a href="#1c">Toonhoogte</a></li>
-                            <li><a href="#1d">Harmonie</a></li>
-                            <li><a href="#1e">Tempo</a></li>
-                            <li><a href="#1f">Volume</a></li>
+                            <li><a href="#TIMBRE">Timbre</a></li>
+                            <li><a href="#TOONSOORT">Toonsoort</a></li>
+                            <li><a href="#TEMPO">Tempo</a></li>
                         </ul>
-                        <li><a href="#1f">Conclusie</a></li>
+                        <li><a href="#CONCLUSIE">Conclusie</a></li>
                     </ul>
                 </li>
                 <li>
@@ -47,15 +43,7 @@
                     <ul>
                         <li><a href="">Muziekstukken Toonsoort</a></li>
                         <li><a href="">Muziekstukken Timbre</a></li>
-                        <li><a href="">Muziekstukken Toonhoogte</a></li>
-                        <li><a href="">Muziekstukken Harmonie</a></li>
                         <li><a href="">Muziekstukken Tempo</a></li>
-                        <li><a href="">Muziekstukken Volume</a></li>
-
-                        <!-- 
-                        <li><a href="#2a">Hoe ben ik van start gegaan bij het schrijven van de filmmziek? </a></li>
-                        <li><a href="#2b">Welke technologie heb ik gebruikt voor het schrijven van de filmmuziek?</a></li>
-                        <li><a href="#2c">Welke obstakels ben ik tegen gekomen tijdens het schrijven van de filmmuziek?</a></li> -->
                     </ul>
                 </li>
                 <li><a href="#Bijlagen">Bijlagen</a></li>
@@ -67,7 +55,11 @@
         <hr>
 
         <div>
+            <br>
             <h3 id="INLEIDING">Inleiding</h3>
+            <p>
+                bla bla bla...
+            </p>
         </div>
 
         <div id="2">
@@ -77,14 +69,29 @@
         </div>
 
         <div>
+            <br>
+            <h3 id="HYPOTHESE">Hypothese</h3>
             <p>
-               <!--  Onderzoek -->
+                Ik denk dat toonsoort de film scene het meest kan beinvloeden.
             </p>
         </div>
 
         <hr>
 
         <div>
+            <br>
+            <h3 id="ONDERZOEK">Onderzoek</h3>
+            <p>
+                Ik kies 3 muzikale elementen: toonsoort, timbre en tempo.
+                Ik ga voor elk element een filmscene uitzoeken en twee door het gekozen element contrasterende
+                muziekstukken maken.
+            </p>
+        </div>
+
+        <hr>
+
+        <div>
+            <br>
             <h3>Timbre</h3>
             <div class="bijlage">
                 <video src="" preload="none" controls></video>
@@ -96,9 +103,12 @@
                 <div>Scene uit <a href="" target="_blank">Pride and Prejudice (1995)</a>met eigen muziek compositie
                     gemaakt met moderne synthesizers</div>
             </div>
+        </div>
 
-            <hr>
+        <hr>
 
+        <div>
+            <br>
             <h3>Toonsoort</h3>
 
             <div class="bijlage">
@@ -111,23 +121,24 @@
             </div>
 
             <div class="bijlage">
-                <video src="Media/Film/Chariots of Fire (1981) Maj.mov" preload="none" controls></video>
+                <video src="Media/Film/Chariots of Fire - Maj.mp4" preload="none" controls></video>
                 <div>Scene uit <a href="" target="_blank">Chariots of Fire (1981)</a> met het thema (Vangelis) in majeur
                     (origineel nagemaakt)</div>
             </div>
             <div class="bijlage">
-                <video src="" preload="none" controls></video>
+                <video src="Media/Film/Chariots of Fire - Min.mp4" preload="none" controls></video>
                 <div>Scene uit <a href="" target="_blank">Chariots of Fire (1981)</a> met het thema (Vangelis) in mineur
                 </div>
             </div>
             <div class="bijlage">
-                <video src="" preload="none" controls></video>
+                <video src="Media/Film/Chariots of Fire - At.mp4" preload="none" controls></video>
                 <div>Scene uit <a href="" target="_blank">Chariots of Fire (1981)</a> met het thema (Vangelis) zonder
                     toonsoort</div>
             </div>
-
-            <hr>
-
+        </div>
+        <hr>
+        <div>
+            <br>
             <h3>Tempo</h3>
             <div class="bijlage">
                 <video src="" preload="none" controls></video>
@@ -137,33 +148,25 @@
                 <video src="" preload="none" controls></video>
                 <div>Scene uit <a href="" target="_blank">Secret life of walter mitty (2013)</a></div>
             </div>
-
-            <hr>
-
-            <h3>Toonsterkte</h3>
-            <div class="bijlage">
-                <video src="" preload="none" controls></video>
-                <div>Scene uit <a href="" target="_blank">Secret life of walter mitty (2013)</a></div>
-            </div>
-            <div class="bijlage">
-                <video src="" preload="none" controls></video>
-                <div>Scene uit <a href="" target="_blank">Secret life of walter mitty (2013)</a></div>
-            </div>
-
-            <hr>
-
+        </div>
+        <hr>
+        <div>
+            <br>
             <h3>Conclusie</h3>
+            <p></p>
         </div>
 
         <hr>
 
         <div>
+            <br>
             <h3 id="Bijlagen">Bijlagen</h3>
         </div>
 
         <hr>
 
         <div>
+            <br>
             <h3 id="BRONNEN">Bronnen</h3>
             <p>
                 <b>Films:</b> <br>
@@ -244,6 +247,7 @@
         <hr>
 
         <div>
+            <br>
             <h3 id="LOGBOEK">Logboek</h3>
             <p>
                 <b>Week 36:</b> <br>
@@ -301,7 +305,8 @@
                 1 uur atonale versie gemaakt voor chariots of fire <br>
                 1 uur aan de opmaak van de site <br>
                 2 uur gecomponeerd <br>
-                30 minuten met Desiree Ceulemans gepraat <br>
+                30 minuten met Desiree Ceulemans gepraat <br>   
+                Twee uur songwriting<br>
             </p>
             <p>
                 <b>Totaal: </b> ?? uur besteed aan mijn profielwerkstuk<br>
@@ -311,18 +316,19 @@
         <hr>
 
         <div>
+            <br>
             <h3 id="PLANNING">Planning</h3>
             <p>
                 Te Doen: <br>
 
             </p>
             <p>
-                <b>Week 45</b> Product 1 Timbre<br>
-                <b>Week 46</b> Product 2 timbre<br>
-                <b>Week 47</b> Product(en) Tempo <br>
-                <b>Week 48</b> Product(en) Dynamiek <br>
-                <b>Week 49</b> Product(en) Eind <br>
-                <b>Week 50</b> Product(en) Eind <br>
+                <b>Week 45</b> Product 1 Timbre <br>
+                <b>Week 46</b> Product 1 Timbre <br>
+                <b>Week 47</b> Product 2 Timbre <br>
+                <b>Week 48</b> Product 1 Tempo <br>
+                <b>Week 49</b> Product 1 Tempo <br>
+                <b>Week 50</b> Product 2 Tempo <br>
                 <b>Week 51</b> Topweek <br>
                 <b>Week 52</b> Schrijven <br>
                 <b>Week 01</b> Schrijven<br>
