--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
                 <div>Scene uit <a href="" target="_blank">Chariots of Fire (1981)</a> met het thema (Vangelis) in mineur
                 </div>
             </div>
-            <div class="bijlage">
+            <!-- <div class="bijlage">
                 <video src="Media/Film/Chariots of Fire - At.mp4" preload="none" controls></video>
                 <div>Scene uit <a href="" target="_blank">Chariots of Fire (1981)</a> met het thema (Vangelis) zonder
                     toonsoort</div>
-            </div>
+            </div> -->
         </div>
         <hr>
         <div>
