--- a/index.html
+++ b/index.html
@@ -93,15 +93,17 @@
         <div>
             <br>
             <h3>Timbre</h3>
-            <div class="bijlage">
-                <video src="" preload="none" controls></video>
-                <div>Scene uit <a href="" target="_blank">Pride and Prejudice (1995)</a> met eigen muziek compositie
-                    gemaakt met klassieke instrumenten</div>
-            </div>
-            <div class="bijlage">
-                <video src="" preload="none" controls></video>
-                <div>Scene uit <a href="" target="_blank">Pride and Prejudice (1995)</a>met eigen muziek compositie
-                    gemaakt met moderne synthesizers</div>
+            <div class="video_bijlagen">
+                <div class="bijlage">
+                    <iframe src="https://www.youtube-nocookie.com/embed/TBIg99ostck?si=B4Qu1DTyZpt3orvj&amp&rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <div>Scene uit <a href="" target="_blank">Pride and Prejudice (1995)</a> met eigen muziek compositie
+                        gemaakt met klassieke instrumenten</div>
+                </div>
+                <div class="bijlage">
+                    <iframe src="https://www.youtube-nocookie.com/embed/TBIg99ostck?si=B4Qu1DTyZpt3orvj&amp&rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <div>Scene uit <a href="" target="_blank">Pride and Prejudice (1995)</a>met eigen muziek compositie
+                        gemaakt met moderne synthesizers</div>
+                </div>
             </div>
         </div>
 
@@ -120,14 +122,16 @@
                 <div><a href="" target="_blank">Halloween (1978)</a> thema majeur</div>
             </div>
 
-            <div class="bijlage">
-                <video src="Media/Film/Chariots of Fire - Maj.mp4" preload="none" controls></video>
-                <div>Scene uit <a href="" target="_blank">Chariots of Fire (1981)</a> met het thema (Vangelis) in majeur
-                    (origineel nagemaakt)</div>
-            </div>
-            <div class="bijlage">
-                <video src="Media/Film/Chariots of Fire - Min.mp4" preload="none" controls></video>
-                <div>Scene uit <a href="" target="_blank">Chariots of Fire (1981)</a> met het thema (Vangelis) in mineur
+            <div class="video_bijlagen">
+                <div class="bijlage">
+                    <iframe src="https://www.youtube-nocookie.com//embed/FvMWlyP4quc?si=Q_Mw7Zm__GzSIlRN&rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <div>Scene uit <a href="" target="_blank">Chariots of Fire (1981)</a> met het thema (Vangelis) in majeur
+                        (origineel nagemaakt)</div>
+                </div>
+                <div class="bijlage">
+                    <iframe src="https://www.youtube-nocookie.com//embed/rJY3GC7x0vM?si=Q_Mw7Zm__GzSIlRN&rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <div>Scene uit <a href="" target="_blank">Chariots of Fire (1981)</a> met het thema (Vangelis) in mineur
+                    </div>
                 </div>
             </div>
             <!-- <div class="bijlage">
@@ -140,13 +144,15 @@
         <div>
             <br>
             <h3>Tempo</h3>
-            <div class="bijlage">
-                <video src="" preload="none" controls></video>
-                <div>Scene uit <a href="" target="_blank">Secret life of walter mitty (2013)</a></div>
-            </div>
-            <div class="bijlage">
-                <video src="" preload="none" controls></video>
-                <div>Scene uit <a href="" target="_blank">Secret life of walter mitty (2013)</a></div>
+            <div class="video_bijlagen">
+                <div class="bijlage">
+                    <video src="" preload="none" controls></video>
+                    <div>Scene uit <a href="" target="_blank">Secret life of walter mitty (2013)</a></div>
+                </div>
+                <div class="bijlage">
+                    <video src="" preload="none" controls></video>
+                    <div>Scene uit <a href="" target="_blank">Secret life of walter mitty (2013)</a></div>
+                </div>
             </div>
         </div>
         <hr>
@@ -324,12 +330,12 @@
 
             </p>
             <p>
-                <b>Week 45</b> Product 1 Timbre <br>
-                <b>Week 46</b> Product 1 Timbre <br>
-                <b>Week 47</b> Product 2 Timbre <br>
-                <b>Week 48</b> Product 1 Tempo <br>
-                <b>Week 49</b> Product 1 Tempo <br>
-                <b>Week 50</b> Product 2 Tempo <br>
+                <b>Week 45</b> Product Timbre (klassiek piano stuk) <br>
+                <b>Week 46</b> Product Timbre (klassiek piano stuk) <br>
+                <b>Week 47</b> Product Timbre (klassiek piano stuk -> elektronisch) <br>
+                <b>Week 48</b> Product Tempo  (funk nummer) <br>
+                <b>Week 49</b> Product Tempo  (funk nummer) <br>
+                <b>Week 50</b> Product Tempo  (funk nummer -> Laag Tempo) <br>
                 <b>Week 51</b> Topweek <br>
                 <b>Week 52</b> Schrijven <br>
                 <b>Week 01</b> Schrijven<br>
