--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <h3>Timbre</h3>
             <div class="video_bijlagen">
                 <div class="bijlage">
-                    <iframe src="https://www.youtube-nocookie.com/embed/TBIg99ostck?si=B4Qu1DTyZpt3orvj&amp&rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <iframe width="1633px" src="https://www.youtube-nocookie.com/embed/TBIg99ostck?si=B4Qu1DTyZpt3orvj&amp&rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     <div>Scene uit <a href="" target="_blank">Pride and Prejudice (1995)</a> met eigen muziek compositie
                         gemaakt met klassieke instrumenten</div>
                 </div>
@@ -147,11 +147,11 @@
             <div class="video_bijlagen">
                 <div class="bijlage">
                     <video src="" preload="none" controls></video>
-                    <div>Scene uit <a href="" target="_blank">Secret life of walter mitty (2013)</a></div>
+                    <div>Scene uit <a href="" target="_blank">???</a></div>
                 </div>
                 <div class="bijlage">
                     <video src="" preload="none" controls></video>
-                    <div>Scene uit <a href="" target="_blank">Secret life of walter mitty (2013)</a></div>
+                    <div>Scene uit <a href="" target="_blank">???</a></div>
                 </div>
             </div>
         </div>
@@ -330,12 +330,11 @@
 
             </p>
             <p>
-                <b>Week 45</b> Product Timbre (klassiek piano stuk) <br>
                 <b>Week 46</b> Product Timbre (klassiek piano stuk) <br>
                 <b>Week 47</b> Product Timbre (klassiek piano stuk -> elektronisch) <br>
-                <b>Week 48</b> Product Tempo  (funk nummer) <br>
-                <b>Week 49</b> Product Tempo  (funk nummer) <br>
-                <b>Week 50</b> Product Tempo  (funk nummer -> Laag Tempo) <br>
+                <b>Week 48</b> Product Tempo  (rock nummer) <br>
+                <b>Week 49</b> Product Tempo  (rock nummer) <br>
+                <b>Week 50</b> Product Tempo  (rock nummer -> Laag Tempo) <br>
                 <b>Week 51</b> Topweek <br>
                 <b>Week 52</b> Schrijven <br>
                 <b>Week 01</b> Schrijven<br>
