--- a/index.html
+++ b/index.html
@@ -93,18 +93,25 @@
         <div>
             <br>
             <h3>Timbre</h3>
-            <div class="video_bijlagen">
-                <div class="bijlage">
-                    <iframe width="1633px" src="https://www.youtube-nocookie.com/embed/TBIg99ostck?si=B4Qu1DTyZpt3orvj&amp&rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                    <div>Scene uit <a href="" target="_blank">Pride and Prejudice (1995)</a> met eigen muziek compositie
-                        gemaakt met klassieke instrumenten</div>
-                </div>
-                <div class="bijlage">
-                    <iframe src="https://www.youtube-nocookie.com/embed/TBIg99ostck?si=B4Qu1DTyZpt3orvj&amp&rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                    <div>Scene uit <a href="" target="_blank">Pride and Prejudice (1995)</a>met eigen muziek compositie
-                        gemaakt met moderne synthesizers</div>
-                </div>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium, perspiciatis! Aut sapiente eum, asperiores dolores tempore sint, commodi adipisci dicta maxime eaque ullam cupiditate amet a aliquid, non eos facilis?
+            </p>
+            <div class="bijlage">
+                <iframe width="1633px" src="https://www.youtube-nocookie.com/embed/TBIg99ostck?si=B4Qu1DTyZpt3orvj&amp&rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <div>Scene uit <a href="" target="_blank">Pride and Prejudice (1995)</a> met eigen muziek compositie
+                    gemaakt met klassieke instrumenten</div>
             </div>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem maxime repellat error enim est, necessitatibus exercitationem quis assumenda labore nisi voluptas deserunt nobis facilis saepe, ea atque placeat similique sint!
+            </p>
+            <div class="bijlage">
+                <iframe src="https://www.youtube-nocookie.com/embed/TBIg99ostck?si=B4Qu1DTyZpt3orvj&amp&rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <div>Scene uit <a href="" target="_blank">Pride and Prejudice (1995)</a>met eigen muziek compositie
+                    gemaakt met moderne synthesizers</div>
+            </div>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur culpa ex placeat molestiae voluptate quidem tempora a quasi aliquid voluptas architecto natus sit, quas alias ratione sint. Iste, voluptatem reprehenderit?
+            </p>
         </div>
 
         <hr>
@@ -112,54 +119,120 @@
         <div>
             <br>
             <h3>Toonsoort</h3>
-
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate soluta, at accusamus aspernatur quasi dolores vero iusto velit beatae facilis atque commodi laborum modi possimus ea alias temporibus incidunt ipsum.
+            </p>
             <div class="bijlage">
                 <audio controls src="Media/Muziek/Halloween Thema.mp3"></audio>
                 <div><a href="" target="_blank">Halloween (1978)</a> thema mineur</div>
             </div>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique hic, reprehenderit amet quis alias ex mollitia sit nostrum id beatae, facilis a omnis odit recusandae dolorum iusto vitae quibusdam suscipit.
+            </p>
             <div class="bijlage">
                 <audio controls src="Media/Muziek/Halloween Thema Maj.mp3"></audio>
                 <div><a href="" target="_blank">Halloween (1978)</a> thema majeur</div>
             </div>
-
-            <div class="video_bijlagen">
-                <div class="bijlage">
-                    <iframe src="https://www.youtube-nocookie.com//embed/FvMWlyP4quc?si=Q_Mw7Zm__GzSIlRN&rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                    <div>Scene uit <a href="" target="_blank">Chariots of Fire (1981)</a> met het thema (Vangelis) in majeur
-                        (origineel nagemaakt)</div>
-                </div>
-                <div class="bijlage">
-                    <iframe src="https://www.youtube-nocookie.com//embed/rJY3GC7x0vM?si=Q_Mw7Zm__GzSIlRN&rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                    <div>Scene uit <a href="" target="_blank">Chariots of Fire (1981)</a> met het thema (Vangelis) in mineur
-                    </div>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum hic dolor accusamus incidunt quibusdam? Error nesciunt cupiditate magnam quia dignissimos suscipit optio, maxime laudantium doloremque at fuga laboriosam, repellat eum.
+            </p>
+            <div class="bijlage">
+                <iframe src="https://www.youtube-nocookie.com//embed/FvMWlyP4quc?si=Q_Mw7Zm__GzSIlRN&rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <div>Scene uit <a href="" target="_blank">Chariots of Fire (1981)</a> met het thema (Vangelis) in majeur
+                    (origineel nagemaakt)</div>
+            </div>
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga dolores vitae, qui dolorem magni sunt. Deserunt mollitia dolor recusandae et illo corporis sapiente laborum vero? Facere repellat dolorum voluptatem saepe.
+            </p>
+            <div class="bijlage">
+                <iframe src="https://www.youtube-nocookie.com//embed/rJY3GC7x0vM?si=Q_Mw7Zm__GzSIlRN&rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <div>Scene uit <a href="" target="_blank">Chariots of Fire (1981)</a> met het thema (Vangelis) in mineur
                 </div>
             </div>
-            <!-- <div class="bijlage">
-                <video src="Media/Film/Chariots of Fire - At.mp4" preload="none" controls></video>
-                <div>Scene uit <a href="" target="_blank">Chariots of Fire (1981)</a> met het thema (Vangelis) zonder
-                    toonsoort</div>
-            </div> -->
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea doloremque quia reiciendis earum voluptatem enim officiis nihil? Itaque nam ratione minima eligendi odit quae laudantium excepturi. Accusamus commodi reprehenderit ipsa.
+            </p>
         </div>
         <hr>
         <div>
             <br>
             <h3>Tempo</h3>
-            <div class="video_bijlagen">
-                <div class="bijlage">
-                    <video src="" preload="none" controls></video>
-                    <div>Scene uit <a href="" target="_blank">???</a></div>
-                </div>
-                <div class="bijlage">
-                    <video src="" preload="none" controls></video>
-                    <div>Scene uit <a href="" target="_blank">???</a></div>
-                </div>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos eveniet rem libero provident molestiae amet voluptatem fuga quas eaque? Quae inventore quaerat debitis atque neque vitae quidem enim vero expedita.
+            </p>
+            <div class="bijlage">
+                <iframe src="https://www.youtube-nocookie.com//embed/FvMWlyP4quc?si=Q_Mw7Zm__GzSIlRN&rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <div>Scene uit <a href="" target="_blank">???</a></div>
             </div>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis quis ad est pariatur explicabo aut? Inventore eos consequatur ratione ad nulla dolores. Adipisci id, voluptate temporibus sunt pariatur eius expedita.
+            </p>
+            <div class="bijlage">
+                <iframe src="https://www.youtube-nocookie.com//embed/FvMWlyP4quc?si=Q_Mw7Zm__GzSIlRN&rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <div>Scene uit <a href="" target="_blank">???</a></div>
+            </div>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam placeat expedita dolorem fugit nesciunt ut laborum rem aperiam reiciendis atque officia autem, illum provident ipsam sunt hic eveniet tempora aliquid?
+            </p>
         </div>
         <hr>
         <div>
             <br>
             <h3>Conclusie</h3>
-            <p></p>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et laboriosam recusandae eaque soluta illum asperiores, mollitia eos, maiores ducimus natus voluptatem alias quis id aliquam! Temporibus nemo blanditiis doloremque perspiciatis.
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos, minima incidunt quis sit odit possimus. Eius ipsa illum iusto quibusdam at iste in cupiditate quaerat! Quasi nulla minima nisi ipsam.
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam placeat, iste excepturi cumque accusantium temporibus praesentium velit possimus, aliquid maxime minus? Magnam, labore unde. Earum quia possimus animi aliquam nobis?
+            </p>
+        </div>
+
+        <hr>
+
+        <div>
+            <br>
+            <h3>Hoe ging mijn proces voor het schrijven van de muziek voor mijn profiel werkstuk?</h3>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis saepe nam eius perspiciatis hic esse. Alias ab reiciendis harum, doloremque eius minima praesentium nisi temporibus eos dolorem hic quis illo.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse nihil animi voluptatibus asperiores debitis doloremque, tenetur officia voluptatum, a reprehenderit iure! Sequi veniam laborum modi hic officiis et? Quaerat, sunt?
+            </p>
+            <hr>
+            <br>
+            <h3>Muziekstukken Toonsoort</h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, saepe magni accusantium molestias tempora placeat modi illum asperiores alias earum, voluptatibus aliquam harum fugit dicta dolor hic est tempore dolorem.
+            </p>
+            <div class="bijlage">
+                <img src="Media/Afbeeldingen/Logic Pro Chariots of Fire.png" alt="">
+                <div>Logic Pro</div>
+            </div>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique architecto dolores, dolorem culpa, necessitatibus eum a assumenda neque, ipsa quisquam cumque totam quis laborum sed molestiae repellat doloribus cupiditate accusamus?
+            </p>
+            <div class="bijlage">
+                <img src="Media/Afbeeldingen/Keyscape MIDI.png" alt="">
+                <div>Logic Pro</div>
+            </div>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta delectus consequatur dolor. Laboriosam quia deserunt corporis? Porro, perspiciatis. Natus ipsa error quam fugit nesciunt esse libero, non suscipit omnis itaque.
+            </p>
+            <div class="bijlage">
+                <img src="Media/Afbeeldingen/Logic Synth.png" alt="">
+                <div>Logic Pro</div>
+            </div>
+            <hr>
+            <br>
+            <h3>Muziekstukken Timbre</h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet inventore voluptates ea animi, eveniet vel excepturi reprehenderit est et, nostrum ipsam quis eos fugit, similique tempore! Unde deleniti accusamus vero!
+            </p>
+            <hr>
+            <br>
+            <h3>Muziekstukken Tempo</h3>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti distinctio ipsa suscipit veritatis, nobis tenetur doloribus delectus? Labore rerum, a ratione, maxime quis sequi dolor ab dignissimos laboriosam aspernatur culpa.
+            </p>
         </div>
 
         <hr>
@@ -167,6 +240,30 @@
         <div>
             <br>
             <h3 id="Bijlagen">Bijlagen</h3>
+            <div class="bijlage">
+                <audio src="" controls></audio>
+                <div>Scene uit <a href="" target="_blank">???</a></div>
+            </div>
+            <div class="bijlage">
+                <audio src="" controls></audio>
+                <div>Scene uit <a href="" target="_blank">???</a></div>
+            </div>
+            <div class="bijlage">
+                <audio src="" controls></audio>
+                <div>Scene uit <a href="" target="_blank">???</a></div>
+            </div>
+            <div class="bijlage">
+                <audio src="" controls></audio>
+                <div>Scene uit <a href="" target="_blank">???</a></div>
+            </div>
+            <div class="bijlage">
+                <audio src="" controls></audio>
+                <div>Scene uit <a href="" target="_blank">???</a></div>
+            </div>
+            <div class="bijlage">
+                <audio src="" controls></audio>
+                <div>Scene uit <a href="" target="_blank">???</a></div>
+            </div>
         </div>
 
         <hr>
@@ -327,14 +424,17 @@
             <h3 id="PLANNING">Planning</h3>
             <p>
                 Te Doen: <br>
+                Klassiek stuk: Piano -> Synths<br>
+                Tempo stuk: Drums, Rhodes, 2x Gitaar  <br>
 
             </p>
+            
             <p>
                 <b>Week 46</b> Product Timbre (klassiek piano stuk) <br>
                 <b>Week 47</b> Product Timbre (klassiek piano stuk -> elektronisch) <br>
-                <b>Week 48</b> Product Tempo  (rock nummer) <br>
-                <b>Week 49</b> Product Tempo  (rock nummer) <br>
-                <b>Week 50</b> Product Tempo  (rock nummer -> Laag Tempo) <br>
+                <b>Week 48</b> Product Tempo (t en l 1:55)<br>
+                <b>Week 49</b> Product Tempo <br>
+                <b>Week 50</b> Product Tempo -> Laag Tempo) <br>
                 <b>Week 51</b> Topweek <br>
                 <b>Week 52</b> Schrijven <br>
                 <b>Week 01</b> Schrijven<br>
